cache tests + cacheCondition
