# lib/validation/EndpointValidator.js
@@ -39,6 +39,53 @@ class EndpointValidator {
             errors.push(...this._validateAppComponent('condition', endpoint.spec.condition, endpoint));
         }
 
+        if (endpoint.spec.cache) {
+            const { entity, type, evict, identifier } = endpoint.spec.cache;
+            if (!entity) {
+                errors.push({
+                    component: 'openapi.json',
+                    message: 'x-endpoint.cache must have property "entity"',
+                    spec_method: httpMethod,
+                    spec_url: urlPath,
+                });
+            }
+            if (!type) {
+                errors.push({
+                    component: 'openapi.json',
+                    message: 'x-endpoint.cache must have property "type"',
+                    spec_method: httpMethod,
+                    spec_url: urlPath,
+                });
+            } else {
+                const cacheTypes = ['single', 'list'];
+                if (!cacheTypes.includes(type)) {
+                    errors.push({
+                        component: 'openapi.json',
+                        message: `x-endpoint.cache.type must be one of ${cacheTypes}`,
+                        spec_method: httpMethod,
+                        spec_url: urlPath,
+                    });
+                }
+                if (type === 'single' && !identifier) {
+                    errors.push({
+                        component: 'openapi.json',
+                        message: 'x-endpoint.cache must have property "identifier" when type is "single"',
+                        spec_method: httpMethod,
+                        spec_url: urlPath,
+                    });
+                }
+            }
+
+            if (_.isEmpty(evict)) {
+                errors.push({
+                    component: 'openapi.json',
+                    message: 'x-endpoint.cache must have property "evict" events specified',
+                    spec_method: httpMethod,
+                    spec_url: urlPath,
+                });
+            }
+        }
+
         if (_.get(endpoint, 'spec.acl.abac')) {
             _.forEach(endpoint.spec.abacOptions, (option) => {
                 const {
